--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,87 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
-
-    <title>Starter Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../../dist/css/uni-form.css" rel="stylesheet">
-    <link href="../../dist/css/uni-form-generic.css" rel="stylesheet">
- 
-
-    <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+<div class="msg">
+  <div id="contacts">
+    <div class="row">        
+      <div class="col-sm-offset-3 col-sm-6">
+        <form action="/contact" method="post" name="sentMessage" class="well" id="contactForm"  novalidate>
+          <legend>Contact me</legend>
+            <div class="control-group">
+              <div class="controls">
+                <input type="text" class="form-control" placeholder="Full Name" id="name" required data-validation-required-message="Please enter your name" />
+                <p class="help-block"></p>
+              </div>
+            </div>         
+             <div class="control-group">
+               <div class="controls">
+                <input type="email" name="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Please enter your email" />
+               </div>
+             </div>         
+                          
+              <div class="control-group">
+                <div class="controls">
+                  <textarea rows="10"  cols="100" class="form-control" 
+                       placeholder="Message" id="message" required
+                       data-validation-required-message="Please enter your message" minlength="5" 
+                       data-validation-minlength-message="Min 5 characters" 
+                        maxlength="999" style="resize:none"></textarea>
+                </div>
+              </div>                  
+               <div id="success"> </div> 
+            <button type="submit" class="btn btn-primary pull-right">Send</button><br />
+          </form>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Main</a></li>
-            <li><a href="biography">Biography</a></li>
-            <li><a href="hobby">My hobby</a></li>
-            <li><a href="about">About me</a></li>
-            <li class="active"><a href="contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </div>
-
-    <div class="container">
-
-<!-- html-код -->
-<form  action='/contact' method='post' class='uniForm'>
-<fieldset class='inlineLabels'>
-  
-  <div class='ctrlHolder'>
-    <label><em>*</em> <strong>Name</strong></label>
-    <input id="text-1" name='name' class='textInput' type='text' value="">
-  </div>
-  <div class='ctrlHolder'>
-    <label><em>*</em> <strong>email</strong></label>
-    <input name='email' class='textInput' type='text' value="">
-  </div>
-</fieldset>
-  
-<fieldset class='blockLabels'>
-  
-  <div class='ctrlHolder'>
-    <label><em>*</em> <strong>Comments</strong></label>
-    <textarea style="resize:none" rows='40' cols='25' name='text' class='wide'></textarea>
-  </div>
-  <div class="buttonHolder">
-    <button type="submit" class="submitButton">Send</button>
-  </div>
-</fieldset>
-</form>
-    </div><!-- /.container -->
-
-  <div class="buttonHolder">
-     
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../../assets/js/jquery.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-  </body>
-</html>
+</div>
