--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,19 +6,19 @@
           <legend>Contact me</legend>
             <div class="control-group">
               <div class="controls">
-                <input type="text" class="form-control" placeholder="Full Name" id="name" required data-validation-required-message="Please enter your name" />
+                <input name="name" type="text" class="form-control" placeholder="Full Name" id="name" required data-validation-required-message="Please enter your name" />
                 <p class="help-block"></p>
               </div>
             </div>         
              <div class="control-group">
                <div class="controls">
-                <input type="email" name="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Please enter your email" />
+                <input type="text" name="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Please enter your email" />
                </div>
              </div>         
                           
               <div class="control-group">
                 <div class="controls">
-                  <textarea rows="10"  cols="100" class="form-control" 
+                  <textarea name="message" rows="10"  cols="100" class="form-control" 
                        placeholder="Message" id="message" required
                        data-validation-required-message="Please enter your message" minlength="5" 
                        data-validation-minlength-message="Min 5 characters" 
@@ -32,3 +32,12 @@
       </div>
     </div>
 </div>
+
+ <% if @errors.any? %>
+              <% @errors.each do |error| %>
+                <div class="alert alert-error alert-block">
+                  <button type="button" class="close" data-dismiss="alert">x</button>
+                  <h4><%= error%></h4>
+                </div>
+              <% end %>  
+              <% end %> 
