--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,39 +20,41 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div class="collapse navbar-collapse">
+         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li <% if request.path['biography'] %> class="active" <% end %>><a href="/biography">Biography</a></li>
             <li <% if request.path['hobby'] %> class="active" <% end %>><a href="/hobby">My hobby</a></li>
             <li <% if request.path['about'] %> class="active" <% end %>><a href="/about">About me</a></li>
             <li <% if request.path['contact'] %> class="active" <% end %>><a href="/contact">Contact</a></li>
-           <% if admin? %>  
-           <div class="reg1">
-           <form class="form-inline" action="/logout" method="post" >
-              <button type="submit" class="btn" >Sign out</button>
-              <p class="text-info">Welcome!</p>
-             </form>
-           </div>
-           </div>
-           <% else %>
-           <div class="reg" >   
-             <form class="form-inline" action="login" method="post">
-               <input  name="username" type="text" class="input-small" placeholder="Name">
-               <input type="password" name="password" class="input-small" placeholder="password">
-               <button type="submit" class="btn" >Enter</button>
-             </form>
-           <% end %>
           </ul>
-        </div><!--/.nav-collapse -->
+           <% unless session[:foo]==nil %>  
+             <form class="nav navbar-right" action="/logout" method="post" >
+               <button type="submit" class="btn btn-success">Log out</button>
+               <p class="text-info">Welcome, User!</p>
+             </form>
+           <% else  %>
+           <form action = "reg" method = "get" class="navbar-form navbar-right">
+               <button type="submit" class="btn btn-success">Sign up</button>
+            </form>
+            <form action = "login" method = "post" class="navbar-form navbar-right">
+                <div class="form-group">
+                  <input type="text" name="username" placeholder="Login" class="form-control">
+                </div>
+                <div class="form-group">
+                   <input type="password" name="password" placeholder="Password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">Sign in</button>
+              </form>
+           <% end %>
+          </div>
+       </div>
       </div>
-    </div>
+      
     <div class="container">
-      <div class="row-fluid">
-        <div class="span8"><%= yield %></div>
-      </div>
+        <%= yield %>
     </div><!-- /.container -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
-    <!--<script src="/js/bootstrap.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/vendor/contact_me.js"></script>-->
   </body>
