--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
            <form action = "reg" method = "get" class="navbar-form navbar-right">
                <button type="submit" class="btn btn-success">Sign up</button>
             </form>
-            <form action = "login" method = "post" class="navbar-form navbar-right">
+            <form  class="navbar-form navbar-right">
                 <div class="form-group">
                   <input type="text" name="username" placeholder="Login" class="form-control">
                 </div>
@@ -53,9 +53,5 @@
     <div class="container">
         <%= yield %>
     </div><!-- /.container -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jqBootstrapValidation.js"></script>
-    <script src="/js/vendor/contact_me.js"></script>-->
   </body>
 </html>
