--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,9 +36,9 @@
            <form action = "reg" method = "get" class="navbar-form navbar-right">
                <button type="submit" class="btn btn-success">Sign up</button>
             </form>
-            <form  class="navbar-form navbar-right">
+            <form  action="sign" method="post" class="navbar-form navbar-right">
                 <div class="form-group">
-                  <input type="text" name="username" placeholder="Login" class="form-control">
+                  <input type="text" name="nameuser" placeholder="Login" class="form-control">
                 </div>
                 <div class="form-group">
                    <input type="password" name="password" placeholder="Password" class="form-control">
